2017-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (tomlparseImpl): Convert the StretchyList to List
	when inserting so they are seen as Lists in R (cf discussion in #16)

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Idem

2017-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.3

2017-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (getTable): Nested TableArray types are now
	recognised; condition print statement on verbose mode

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Idem

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* src/init.c (R_init_RcppTOML): all R_registerRoutines()
	and R_useDynamicSymbols()
	* NAMESPACE: Use .registration=TRUE on useDynLib

        * LICENSE: Added to repository
        * .Rbuildignore: Do not include LICENSE in package

	* inst/toml/ex4.toml (bla): Uncomment Datetimevector

	* inst/toml/example.toml: Updated to upstream README.md version

	* README.md: Expanded with example and screenshot
	* local/emacsAndTOML.png: Added for README
        * .Rbuildignore: Do not include local/ in package

2017-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (tomlparseImpl): Correct TableArray type assignment

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Ditto

	* .codecov.yml (comment): Add coverage support
	* .travis.yml: Ditto

2017-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (collapsedList): Preserve type for Date and
	Datetime vectors as well as boolean vectors

2017-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.1

2017-02-08  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>
