@@ -1,8 +1,8 @@
 Package: RcppTOML
 Type: Package
 Title: 'Rcpp' Bindings to Parser for Tom's Obvious Markup Language
-Version: 0.1.3.1
-Date: 2017-05-02
+Version: 0.1.3.2
+Date: 2017-11-13
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The configuration format defined by 'TOML' (which expands to
